--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
           <div class="results clearfix">
 
             <div class="awayteam" ng-show="gameSelected">
-              <h3>Away</h3>
+              <!-- <h3>Away</h3> -->
               <img ng-src="{{awaySrc}}" alt="" class="awaylogo">
               <p>Final Score: {{awayScore}}</p>
               <p>Starting Pitcher: {{awayPitcher}}</p>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="hometeam" ng-show="gameSelected">
-              <h3>Home</h3>
+              <!-- <h3>Home</h3> -->
               <img src="{{homeSrc}}" alt="" class="homelogo">
               <p>Final Score: {{homeScore}}</p>
               <p>Starting Pitcher: {{homePitcher}}</p>
